FIX| hero section alignment to the top with padding

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -191,7 +191,8 @@ main {
   display: flex;
   flex-direction: column;
   /* align-items: center; */
-  justify-content: center;
+  justify-content: start;
+  padding-top: 6rem;
   gap: 1rem;
 }
 #custom_emoji {
